Tooltip spacing/wrap fix

--- a/src/css/seed.less
+++ b/src/css/seed.less
@@ -51,20 +51,28 @@
 .leaflet-popup {
   h1 {
     font-size: 20px;
-    margin: 0;
+    margin: 0 0 8px;
   }
 
   .row {
     .display-flex;
+    .align-items(stretch);
 
     .cell {
       .flex(1);
+
+      &:not(:last-child) {
+        padding-right: 8px;
+        margin-right: 8px;
+        border-right: 1px solid @df-light-gray;
+      }
     }
   }
 
   h2 {
     font-size: 16px;
-    margin-bottom: 0;
+    margin: 0;
+    white-space: nowrap;
   }
 
   ul {
